--- a/ConsoleApplication1/App.config
+++ b/ConsoleApplication1/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add name="strConn" connectionString="Data Source=HP201-1\;Initial Catalog=UserManager;Integrated Security=True"/>
+  </connectionStrings>
 </configuration>
